xee-xpath/tests/snapshots/logical__empty_node_set_guards_error.snap
---
source: xee-xpath/tests/logical.rs
expression: "run_xml(\"<root/>\", r#\"/root/missing and xs:int(\"\") eq 1\"#)"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    false,
                ),
            ),
        },
    ),
)
