xee-xpath/tests/snapshots/logical__empty_sequence_guards_type_error.snap
---
source: xee-xpath/tests/logical.rs
expression: "run(\"() and (1, 2)\")"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    false,
                ),
            ),
        },
    ),
)
