xee-xpath/tests/snapshots/logical__nan_short_circuits.snap
---
source: xee-xpath/tests/logical.rs
expression: "run(r#\"xs:double(\"NaN\") and xs:int(\"\") eq 1\"#)"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    false,
                ),
            ),
        },
    ),
)
