xee-xpath/tests/snapshots/logical__nested_logical.snap
---
source: xee-xpath/tests/logical.rs
expression: "run(\"(false() and xs:int('') eq 1) or true()\")"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    true,
                ),
            ),
        },
    ),
)
