xee-xpath/tests/snapshots/logical__node_set_effective_boolean_value.snap
---
source: xee-xpath/tests/logical.rs
expression: "run_xml(\"<root><a/><a/></root>\", \"/root/a and true()\")"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    true,
                ),
            ),
        },
    ),
)
