xee-xpath/tests/snapshots/logical__or_empty_sequence.snap
---
source: xee-xpath/tests/logical.rs
expression: "run(\"() or 'x'\")"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    true,
                ),
            ),
        },
    ),
)
