xee-xpath/tests/snapshots/logical__or_false_false.snap
---
source: xee-xpath/tests/logical.rs
expression: "run(\"false() or false()\")"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    false,
                ),
            ),
        },
    ),
)
