xee-xpath/tests/snapshots/logical__or_false_propagates_error.snap
---
source: xee-xpath/tests/logical.rs
expression: "run(r#\"false() or xs:int(\"\") eq 1\"#)"
---
Err(
    SpannedError {
        error: FORG0001,
        span: Some(
            SourceSpan(
                11,
                21,
            ),
        ),
    },
)
