xee-xpath/tests/snapshots/logical__or_false_true.snap
---
source: xee-xpath/tests/logical.rs
expression: "run(\"false() or true()\")"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    true,
                ),
            ),
        },
    ),
)
