xee-xpath/tests/snapshots/logical__or_left_error_propagates.snap
---
source: xee-xpath/tests/logical.rs
expression: "run(r#\"xs:int(\"\") eq 1 or true()\"#)"
---
Err(
    SpannedError {
        error: FORG0001,
        span: Some(
            SourceSpan(
                0,
                10,
            ),
        ),
    },
)
